// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RichTextHTag renders H tag with nested strong and span tag 1`] = `
<View>
  <Text
    allowFontScaling={false}
    mb={0}
    mt={0}
    style={
      Array [
        Object {
          "fontFamily": "Montserrat-SemiBold",
          "marginBottom": 0,
          "marginTop": 0,
        },
        Array [
          undefined,
          undefined,
        ],
      ]
    }
  >
    <Text
      allowFontScaling={false}
      style={
        Array [
          Object {
            "fontFamily": "Montserrat-Bold",
          },
          undefined,
        ]
      }
    >
      h2
    </Text>
    <Text
      allowFontScaling={false}
      style={
        Array [
          Object {
            "fontFamily": "Montserrat-SemiBold",
          },
          undefined,
        ]
      }
    >
       tag with nested strong and 
    </Text>
    <Text
      allowFontScaling={false}
      style={
        Array [
          Object {
            "fontFamily": "Montserrat-SemiBold",
          },
          undefined,
        ]
      }
    >
      span
    </Text>
    <Text
      allowFontScaling={false}
      style={
        Array [
          Object {
            "fontFamily": "Montserrat-SemiBold",
          },
          undefined,
        ]
      }
    >
       tag
    </Text>
  </Text>
</View>
`;

exports[`RichTextHTag renders H tag with nested strong tag 1`] = `
<View>
  <Text
    allowFontScaling={false}
    mb={0}
    mt={0}
    style={
      Array [
        Object {
          "fontFamily": "Montserrat-SemiBold",
          "marginBottom": 0,
          "marginTop": 0,
        },
        Array [
          undefined,
          undefined,
        ],
      ]
    }
  >
    <Text
      allowFontScaling={false}
      style={
        Array [
          Object {
            "fontFamily": "Montserrat-Bold",
          },
          undefined,
        ]
      }
    >
      h1
    </Text>
    <Text
      allowFontScaling={false}
      style={
        Array [
          Object {
            "fontFamily": "Montserrat-SemiBold",
          },
          undefined,
        ]
      }
    >
       tag with nested strong tag
    </Text>
  </Text>
</View>
`;

exports[`RichTextHTag renders H1 tag 1`] = `
<View>
  <Text
    allowFontScaling={false}
    mb={0}
    mt={0}
    style={
      Array [
        Object {
          "fontFamily": "Montserrat-SemiBold",
          "marginBottom": 0,
          "marginTop": 0,
        },
        Array [
          undefined,
          undefined,
        ],
      ]
    }
  >
    <Text
      allowFontScaling={false}
      style={
        Array [
          Object {
            "fontFamily": "Montserrat-SemiBold",
          },
          undefined,
        ]
      }
    >
      lorem ipsum h1
    </Text>
  </Text>
</View>
`;

exports[`RichTextHTag renders H2 tag 1`] = `
<View>
  <Text
    allowFontScaling={false}
    mb={0}
    mt={0}
    style={
      Array [
        Object {
          "fontFamily": "Montserrat-SemiBold",
          "marginBottom": 0,
          "marginTop": 0,
        },
        Array [
          undefined,
          undefined,
        ],
      ]
    }
  >
    <Text
      allowFontScaling={false}
      style={
        Array [
          Object {
            "fontFamily": "Montserrat-SemiBold",
          },
          undefined,
        ]
      }
    >
      lorem ipsum h2
    </Text>
  </Text>
</View>
`;

exports[`RichTextHTag renders H3 tag 1`] = `
<View>
  <Text
    allowFontScaling={false}
    mb={0}
    mt={0}
    style={
      Array [
        Object {
          "fontFamily": "Montserrat-SemiBold",
          "marginBottom": 0,
          "marginTop": 0,
        },
        Array [
          undefined,
          undefined,
        ],
      ]
    }
  >
    <Text
      allowFontScaling={false}
      style={
        Array [
          Object {
            "fontFamily": "Montserrat-SemiBold",
          },
          undefined,
        ]
      }
    >
      lorem ipsum h3
    </Text>
  </Text>
</View>
`;

exports[`RichTextHTag renders H4 tag 1`] = `
<View>
  <Text
    allowFontScaling={false}
    mb={0}
    mt={0}
    style={
      Array [
        Object {
          "fontFamily": "Montserrat-SemiBold",
          "marginBottom": 0,
          "marginTop": 0,
        },
        Array [
          undefined,
          undefined,
        ],
      ]
    }
  >
    <Text
      allowFontScaling={false}
      style={
        Array [
          Object {
            "fontFamily": "Montserrat-SemiBold",
          },
          undefined,
        ]
      }
    >
      lorem ipsum h4
    </Text>
  </Text>
</View>
`;

exports[`RichTextHTag renders H5 tag 1`] = `
<View>
  <Text
    allowFontScaling={false}
    mb={0}
    mt={0}
    style={
      Array [
        Object {
          "fontFamily": "Montserrat-SemiBold",
          "marginBottom": 0,
          "marginTop": 0,
        },
        Array [
          undefined,
          undefined,
        ],
      ]
    }
  >
    <Text
      allowFontScaling={false}
      style={
        Array [
          Object {
            "fontFamily": "Montserrat-SemiBold",
          },
          undefined,
        ]
      }
    >
      lorem ipsum h5
    </Text>
  </Text>
</View>
`;

exports[`RichTextHTag renders H6 tag 1`] = `
<View>
  <Text
    allowFontScaling={false}
    mb={0}
    mt={0}
    style={
      Array [
        Object {
          "fontFamily": "Montserrat-SemiBold",
          "marginBottom": 0,
          "marginTop": 0,
        },
        Array [
          undefined,
          undefined,
        ],
      ]
    }
  >
    <Text
      allowFontScaling={false}
      style={
        Array [
          Object {
            "fontFamily": "Montserrat-SemiBold",
          },
          undefined,
        ]
      }
    >
      lorem ipsum h6
    </Text>
  </Text>
</View>
`;
